Added Get Sessions, Permissions Related Endpoints
